[gd_scene load_steps=43 format=2]

[ext_resource path="res://GraphicAssets/Fonts/kenpixel.tres" type="DynamicFont" id=1]
[ext_resource path="res://GraphicAssets/UI/Buttons/triangle.png" type="Texture" id=3]
[ext_resource path="res://GraphicAssets/Backgrounds/blueGrass.png" type="Texture" id=5]
[ext_resource path="res://GraphicAssets/UI/Store/StoreTabs/carTab.png" type="Texture" id=6]
[ext_resource path="res://GraphicAssets/UI/Store/StoreTabs/tabUnselected.png" type="Texture" id=7]
[ext_resource path="res://GraphicAssets/UI/Store/StoreBackgrounds/storeBg.png" type="Texture" id=8]
[ext_resource path="res://GraphicAssets/Fonts/kenpixel.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://GraphicAssets/UI/Store/StoreCars/storeOffroad.png" type="Texture" id=10]
[ext_resource path="res://GraphicAssets/UI/Store/StoreCars/storeKart.png" type="Texture" id=11]
[ext_resource path="res://GraphicAssets/UI/Store/StoreCars/storeTruck.png" type="Texture" id=12]
[ext_resource path="res://GraphicAssets/UI/Store/StoreCars/storeSedan.png" type="Texture" id=13]
[ext_resource path="res://Scripts/Garage/garage_page_controller.gd" type="Script" id=14]
[ext_resource path="res://GraphicAssets/UI/Store/StoreBackgrounds/emptyBg.png" type="Texture" id=15]
[ext_resource path="res://GraphicAssets/Backgrounds/coloredShroom.png" type="Texture" id=16]
[ext_resource path="res://GraphicAssets/UI/Store/StoreTabs/tabSelected.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Garage/car_panel_controller.gd" type="Script" id=18]
[ext_resource path="res://Scripts/Garage/background_panel_controller.gd" type="Script" id=19]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.501961, 0.454902, 0.454902, 0.403922 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.384314, 0.384314, 0.384314, 1 )

[sub_resource type="DynamicFont" id=24]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 833, 359 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 198, 300 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=12]
size = 28
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 198, 300 )

[sub_resource type="StyleBoxTexture" id=14]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 198, 300 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 198, 300 )

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 306, 202 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxTexture" id=23]
texture = ExtResource( 15 )
region_rect = Rect2( 0, 0, 306, 202 )

[node name="GaragePage" type="Panel"]
margin_left = 140.0
margin_top = 60.0
margin_right = 1140.0
margin_bottom = 660.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
unselected_tab_bg = ExtResource( 7 )
selected_tab_bg = ExtResource( 17 )

[node name="MenuBar" type="Panel" parent="."]
margin_right = 1000.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GarageText" type="Label" parent="MenuBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.5895
margin_top = -20.3978
margin_right = 68.4105
margin_bottom = 25.6022
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 24 )
text = "Garage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="MenuBar"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -28.0
margin_right = 27.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 3 )
texture_focused = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GarageTabs" type="Panel" parent="."]
margin_left = 392.0
margin_top = 108.0
margin_right = 608.0
margin_bottom = 212.0
custom_styles/panel = SubResource( 3 )

[node name="CarTab" type="TextureButton" parent="GarageTabs"]
margin_right = 104.0
margin_bottom = 104.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CarIcon" type="TextureRect" parent="GarageTabs/CarTab"]
margin_left = 4.0
margin_top = 30.0
margin_right = 52.0
margin_bottom = 67.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="BackgroundTab" type="TextureButton" parent="GarageTabs"]
margin_left = 108.0
margin_right = 212.0
margin_bottom = 104.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundIcon" type="TextureRect" parent="GarageTabs/BackgroundTab"]
margin_left = 14.0
margin_top = 16.0
margin_right = 51.0
margin_bottom = 52.9999
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="GaragePanel" type="Panel" parent="."]
margin_left = 1.0
margin_top = 212.0
margin_right = 999.0
margin_bottom = 576.0
custom_styles/panel = SubResource( 4 )

[node name="CarPanel" type="Panel" parent="GaragePanel"]
margin_left = 13.0
margin_top = 11.0
margin_right = 985.0
margin_bottom = 339.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 18 )

[node name="SedanPanel" type="Panel" parent="GaragePanel/CarPanel"]
margin_right = 240.0
margin_bottom = 324.0
custom_styles/panel = SubResource( 6 )

[node name="SedanButton" type="Button" parent="GaragePanel/CarPanel/SedanPanel"]
margin_right = 240.0
margin_bottom = 324.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )

[node name="SedanLabel" type="Label" parent="GaragePanel/CarPanel/SedanPanel"]
margin_left = 17.0
margin_top = 11.0
margin_right = 225.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 25 )
text = "Sedan"
align = 1

[node name="StatusLabel" type="Label" parent="GaragePanel/CarPanel/SedanPanel"]
margin_left = 17.0
margin_top = 50.0
margin_right = 225.0
margin_bottom = 98.0
custom_colors/font_color = Color( 1, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 12 )
text = "ACTIVE"
align = 1

[node name="TruckPanel" type="Panel" parent="GaragePanel/CarPanel"]
margin_left = 244.0
margin_right = 484.0
margin_bottom = 324.0
custom_styles/panel = SubResource( 13 )

[node name="TruckButton" type="Button" parent="GaragePanel/CarPanel/TruckPanel"]
margin_right = 240.0
margin_bottom = 324.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )

[node name="TruckLabel" type="Label" parent="GaragePanel/CarPanel/TruckPanel"]
margin_left = 17.0
margin_top = 11.0
margin_right = 225.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Truck"
align = 1

[node name="StatusLabel" type="Label" parent="GaragePanel/CarPanel/TruckPanel"]
margin_left = 17.0
margin_top = 50.0
margin_right = 225.0
margin_bottom = 98.0
custom_colors/font_color = Color( 1, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 12 )
text = "ACTIVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffroadPanel" type="Panel" parent="GaragePanel/CarPanel"]
margin_left = 488.0
margin_right = 728.0
margin_bottom = 324.0
custom_styles/panel = SubResource( 14 )

[node name="OffroadButton" type="Button" parent="GaragePanel/CarPanel/OffroadPanel"]
margin_right = 240.0
margin_bottom = 324.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )

[node name="OffroadLabel" type="Label" parent="GaragePanel/CarPanel/OffroadPanel"]
margin_left = 17.0
margin_top = 11.0
margin_right = 225.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Offroad"
align = 1

[node name="StatusLabel" type="Label" parent="GaragePanel/CarPanel/OffroadPanel"]
margin_left = 17.0
margin_top = 50.0
margin_right = 225.0
margin_bottom = 98.0
custom_colors/font_color = Color( 1, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 12 )
text = "ACTIVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KartPanel" type="Panel" parent="GaragePanel/CarPanel"]
margin_left = 732.0
margin_right = 972.0
margin_bottom = 324.0
custom_styles/panel = SubResource( 15 )

[node name="KartButton" type="Button" parent="GaragePanel/CarPanel/KartPanel"]
margin_right = 240.0
margin_bottom = 324.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KartLabel" type="Label" parent="GaragePanel/CarPanel/KartPanel"]
margin_left = 17.0
margin_top = 11.0
margin_right = 225.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Kart"
align = 1

[node name="StatusLabel" type="Label" parent="GaragePanel/CarPanel/KartPanel"]
margin_left = 17.0
margin_top = 50.0
margin_right = 225.0
margin_bottom = 98.0
custom_colors/font_color = Color( 1, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 12 )
text = "ACTIVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundPanel" type="Panel" parent="GaragePanel"]
visible = false
margin_left = 13.0
margin_top = 11.0
margin_right = 985.0
margin_bottom = 339.0
custom_styles/panel = SubResource( 16 )
script = ExtResource( 19 )

[node name="BlueBGPanel" type="Panel" parent="GaragePanel/BackgroundPanel"]
margin_right = 486.0
margin_bottom = 324.0
custom_styles/panel = SubResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueBGTexture" type="TextureRect" parent="GaragePanel/BackgroundPanel/BlueBGPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 466.0
margin_bottom = 304.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="GaragePanel/BackgroundPanel/BlueBGPanel"]
margin_left = 20.0
margin_top = 256.0
margin_right = 471.0
margin_bottom = 304.0
custom_colors/font_color = Color( 1, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 12 )
text = "ACTIVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlueBGButton" type="Button" parent="GaragePanel/BackgroundPanel/BlueBGPanel"]
margin_right = 486.0
margin_bottom = 324.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )

[node name="MushroomBGPanel" type="Panel" parent="GaragePanel/BackgroundPanel"]
margin_left = 486.0
margin_right = 972.0
margin_bottom = 324.0
custom_styles/panel = SubResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MushroomBGTexture" type="TextureRect" parent="GaragePanel/BackgroundPanel/MushroomBGPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 466.0
margin_bottom = 304.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusLabel" type="Label" parent="GaragePanel/BackgroundPanel/MushroomBGPanel"]
margin_left = 20.0
margin_top = 256.0
margin_right = 471.0
margin_bottom = 304.0
custom_colors/font_color = Color( 1, 0.12549, 0.12549, 1 )
custom_fonts/font = SubResource( 12 )
text = "ACTIVE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MushroomBGButton" type="Button" parent="GaragePanel/BackgroundPanel/MushroomBGPanel"]
margin_right = 486.0
margin_bottom = 324.0
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )

[connection signal="pressed" from="MenuBar/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="GarageTabs/CarTab" to="." method="_on_Tab_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GarageTabs/BackgroundTab" to="." method="_on_Tab_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GaragePanel/CarPanel/SedanPanel/SedanButton" to="GaragePanel/CarPanel" method="_on_car_button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GaragePanel/CarPanel/TruckPanel/TruckButton" to="GaragePanel/CarPanel" method="_on_car_button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="GaragePanel/CarPanel/OffroadPanel/OffroadButton" to="GaragePanel/CarPanel" method="_on_car_button_pressed" binds= [ 2 ]]
[connection signal="pressed" from="GaragePanel/CarPanel/KartPanel/KartButton" to="GaragePanel/CarPanel" method="_on_car_button_pressed" binds= [ 3 ]]
[connection signal="pressed" from="GaragePanel/BackgroundPanel/BlueBGPanel/BlueBGButton" to="GaragePanel/BackgroundPanel" method="_on_bg_button_pressed" binds= [ 0 ]]
[connection signal="pressed" from="GaragePanel/BackgroundPanel/MushroomBGPanel/MushroomBGButton" to="GaragePanel/BackgroundPanel" method="_on_bg_button_pressed" binds= [ 1 ]]
